--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,8 @@ jobs:
     - uses: docker/build-push-action@v1.1.0
       with:
         # Username used to log in to a Docker registry. If not set then no login will occur
-        username: # haakeitc
+        username: haakeitc
         # Password or personal access token used to log in to a Docker registry. If not set then no login will occur
-        password: # xcsdwe23#  
-        build-args:
-        push: true
-        
-        
+        password: xcsdwe23#  
+        # build-args:
+        # push: true
